--- a/04_vogal.html
+++ b/04_vogal.html
@@ -3,11 +3,22 @@
     //PROBLEMA: Vogal - Construa um programa que leia um caractere e informe se este caractere é uma vogal.
 
     // ENTRADA
+    const letra = prompt("Informe um caractere:").toUpperCase();
 
-    
     // PROCESSAMENTO
+    switch (letra) {
+        case "A":
+        case "E":
+        case "I":
+        case "O":
+        case "U":
+            alert(`Vogal`);
+            break;
+        default:
+            alert(`Consoante`);
+            break;
+    }
 
-    
     // SAÍDA
 
 </script>
